fixing car delete icon alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,7 +48,7 @@ $standard-padding: 20px;
 
         svg {
             margin-left: 5px;
-            opacity: 30%;
+            opacity: 0.3;
         }
         span {
             color: $star-icon-color;
